src/objects/Contact_Prefix_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>This custom setting stores contact prefix and abbreviated prefix mapping</description>
    <fields>
        <fullName>Abbreviated_Prefix__c</fullName>
        <description>This field stores the abbreviated value of prefix on contact</description>
        <label>Abbreviated Prefix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Prefix__c</fullName>
        <label>Alternate Prefix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_on_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display on Web</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender_Restriction__c</fullName>
        <description>Stores gender restriction for prefix</description>
        <label>Gender Restriction</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <description>This Field stores the prefix value on contact</description>
        <label>Prefix</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Contact Prefix Mapping</label>
</CustomObject>